--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,9 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.google.firebase:firebase-auth:9.8.0'
     compile 'com.android.support:support-v4:25.0.0'
-    
+
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
+
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 }
